Add delete and delete all for productcategory

--- a/Pharma.Web/Views/Admin/Index.cshtml
+++ b/Pharma.Web/Views/Admin/Index.cshtml
@@ -860,6 +860,8 @@
     <script src="~/app/shared/directives/pagerDirective.js"></script>
     <script src="~/app/shared/services/notificationService.js"></script>
     <script src="~/app/shared/services/commonService.js"></script>
+    <script src="~/Assets/admin/libs/bootbox/bootbox.js/bootbox.js"></script>
+    <script src="~/Assets/admin/libs/ngBootbox/node_modules/ngbootbox/ngBootbox.js"></script>
 
     <script src="~/app/components/product_categories/productCategories.module.js"></script>
     <script src="~/app/components/products/products.module.js"></script>
