--- a/Pharma.Web/app/components/product_categories/productCategoryListView.html
+++ b/Pharma.Web/app/components/product_categories/productCategoryListView.html
@@ -42,7 +42,8 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <button class="btn btn-success" ui-sref="add_product_category">Thêm mới</button>
+                    <button class="btn btn-danger fa-pull-right" ng-click="deleteMultiple()" id="btnDelete" disabled>Xóa</button>
+                    <button class="btn btn-success fa-pull-right" ui-sref="add_product_category">Thêm mới</button>
                 </div>
             </div>
             <div class="row">
@@ -50,6 +51,7 @@
                     <table class="table table-bordered">
                         <thead>
                             <tr>
+                                <th><input name="all" type="checkbox" ng-click="selectAll()"/></th>
                                 <th style="width: 5%">ID</th>
                                 <th style="width: 55%">Tên danh mục</th>
                                 <th style="width: 20%">Ngày tạo</th>
@@ -59,6 +61,7 @@
                         </thead>
                         <tbody>
                             <tr ng-repeat="item in productCategories">
+                                <td><input type="checkbox" ng-model="item.checked" name="all"/></td>
                                 <td>{{item.ID}}</td>
                                 <td>{{item.Name}}</td>
                                 <td>
@@ -73,7 +76,7 @@
                                     <button class="btn btn-sm btn-primary" ui-sref="edit_product_category({id:item.ID})">
                                         <i class="fa fa-pencil"></i>
                                     </button>
-                                    <button class="btn btn-sm btn-danger">
+                                    <button class="btn btn-sm btn-danger" ng-click="deleteProductCategory(item.ID)">
                                         <i class="fa fa-trash"></i>
                                     </button>
                                 </td>
@@ -81,7 +84,7 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <td colspan="5"><span class="fa-pull-right">Trang: số {{page + 1}} - Tổng số bản ghi: {{totalCount}}</span></td>
+                                <td colspan="6"><span class="fa-pull-right">Trang: số {{page + 1}} - Tổng số bản ghi: {{totalCount}}</span></td>
                             </tr>
                         </tfoot>
                     </table>
