--- a/Pharma.Web/app/components/products/productEditView.html
+++ b/Pharma.Web/app/components/products/productEditView.html
@@ -131,7 +131,7 @@
                     </div>
 
                     <div class="form-group row">
-                        <label for="unitId" class="col-sm-4 col-form-label">Đơn vị</label>
+                        <label for="unitId" class="col-sm-4 col-form-label">Đơn vị lẻ</label>
                         <div class="col-sm-8">
                             <select name="unitId" required class="form-control" ng-model="product.UnitID" ng-options="option.ID as option.Name for option in units">
                                 <option value="">--- Chọn đơn vị ---</option>
@@ -170,6 +170,7 @@
                         <div class="col-sm-8">
                             <input type="text" class="form-control" ng-maxlength="256" name="image" ng-model="product.Image">
                             <span ng-show="frmUpdateProduct.image.$error.maxlength" class="badge badge-pill badge-danger">Hình ảnh chỉ được 256 ký tự</span>
+                            <button type="button" class="btn btn-default" ng-click="ChooseImage()">Chọn ảnh</button>
                         </div>
                     </div>
 
@@ -177,6 +178,13 @@
                         <label for="moreImage" class="col-sm-4 col-form-label">Nhóm ảnh</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" name="moreImage" ng-model="product.MoreImage">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="tags" class="col-sm-4 col-form-label">Tags</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" name="tags" ng-model="product.Tags">
                         </div>
                     </div>
 
