Add post, post category

--- a/Pharma.Web/app/components/footers/footerAddView.html
+++ b/Pharma.Web/app/components/footers/footerAddView.html
@@ -7,7 +7,7 @@
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Trang chủ</a></li>
+                    <li class="breadcrumb-item"><a href="admin#!/admin">Trang chủ</a></li>
                     <li class="breadcrumb-item">Sản phẩm</li>
                     <li class="breadcrumb-item"><a ui-sref="footers">Cuối trang</a></li>
                     <li class="breadcrumb-item active">Thêm mới</li>
@@ -21,10 +21,7 @@
 <section class="content">
     <!-- Horizontal Form -->
     <div class="card card-default">
-        <div class="card-header">
-            <h3 class="card-title">Thêm mới cuối trang</h3>
-        </div>
-        <!-- /.card-header -->
+       
         <!-- form start -->
         <form class="form-horizontal" novalidate name="frmAddFooter" role="form" ng-submit="Addfooter()">
             <div class="card-body row">
