--- a/Pharma.Web/app/components/footers/footerListView.html
+++ b/Pharma.Web/app/components/footers/footerListView.html
@@ -7,7 +7,7 @@
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Trang chủ</a></li>
+                    <li class="breadcrumb-item"><a href="admin#!/admin">Trang chủ</a></li>
                     <li class="breadcrumb-item">Cấu hình</li>
                     <li class="breadcrumb-item active">Cuối trang</li>
                 </ol>
@@ -21,17 +21,7 @@
 
     <!-- Default box -->
     <div class="card">
-        <div class="card-header">
-            <h3 class="card-title">Tùy chỉnh cuối trang</h3>
-            <div class="card-tools">
-                <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
-                    <i class="fas fa-minus"></i>
-                </button>
-                <button type="button" class="btn btn-tool" data-card-widget="remove" title="Remove">
-                    <i class="fas fa-times"></i>
-                </button>
-            </div>
-        </div>
+        
         <div class="card-body">
             <div class="row">
                 <div class="col-md-6">
