--- a/Pharma.Web/app/components/units/unitAddView.html
+++ b/Pharma.Web/app/components/units/unitAddView.html
@@ -7,7 +7,7 @@
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Trang chủ</a></li>
+                    <li class="breadcrumb-item"><a href="admin#!/admin">Trang chủ</a></li>
                     <li class="breadcrumb-item">Sản phẩm</li>
                     <li class="breadcrumb-item"><a ui-sref="units">Đơn vị tính</a></li>
                     <li class="breadcrumb-item active">Thêm mới</li>
@@ -21,11 +21,7 @@
 <section class="content">
     <!-- Horizontal Form -->
     <div class="card card-default">
-        <div class="card-header">
-            <h3 class="card-title">Thêm mới đơn vị tính</h3>
-        </div>
-        <!-- /.card-header -->
-        <!-- form start -->
+       
         <form class="form-horizontal" novalidate name="frmAddUnit" role="form" ng-submit="AddUnit()">
             <div class="card-body row">
 
