--- a/Pharma.Web/Views/Admin/Index.cshtml
+++ b/Pharma.Web/Views/Admin/Index.cshtml
@@ -47,8 +47,11 @@
     <script src="~/app/shared/services/commonService.js"></script>
 
     <script src="~/app/components/footers/footers.module.js"></script>
+    <script src="~/app/components/post_categories/postCategories.module.js"></script>
+    <script src="~/app/components/posts/posts.module.js"></script>
     <script src="~/app/components/product_categories/productCategories.module.js"></script>
     <script src="~/app/components/products/products.module.js"></script>
+    <script src="~/app/components/subjects/subjects.mudule.js"></script>>
     <script src="~/app/components/units/units.module.js"></script>
     <script src="~/app/app.js"></script>
     <script src="~/app/components/home/rootController.js"></script>
@@ -56,12 +59,21 @@
     <script src="~/app/components/footers/footerListController.js"></script>
     <script src="~/app/components/footers/footerEditController.js"></script>
     <script src="~/app/components/footers/footerAddController.js"></script>
+    <script src="~/app/components/post_categories/postCategoryListController.js"></script>
+    <script src="~/app/components/post_categories/postCategoryAddController.js"></script>
+    <script src="~/app/components/post_categories/postCategoryEditController.js"></script>
+    <script src="~/app/components/posts/postListController.js"></script>
+    <script src="~/app/components/posts/postAddController.js"></script>
+    <script src="~/app/components/posts/postEditController.js"></script>
     <script src="~/app/components/product_categories/productCategoryListController.js"></script>
     <script src="~/app/components/product_categories/productCategoryAddController.js"></script>
     <script src="~/app/components/product_categories/productCategoryEditController.js"></script>
     <script src="~/app/components/products/productAddController.js"></script>
     <script src="~/app/components/products/productListController.js"></script>
     <script src="~/app/components/products/productEditController.js"></script>
+    <script src="~/app/components/subjects/subjectListController.js"></script>
+    <script src="~/app/components/subjects/subjectEditController.js"></script>
+    <script src="~/app/components/subjects/subjectAddController.js"></script>
     <script src="~/app/components/units/unitListController.js"></script>
     <script src="~/app/components/units/unitAddController.js"></script>
     <script src="~/app/components/units/unitEditController.js"></script>
