--- a/Pharma.Web/Views/Shared/Header.cshtml
+++ b/Pharma.Web/Views/Shared/Header.cshtml
@@ -2,7 +2,7 @@
     <header class="d-flex flex-wrap py-4 mb-4 border-bottom row">
         <a href="/" class="col-md-4 d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
             <i class="fa-solid fa-pills fs-1" style="color: #1E3B29"></i>
-            <span class="fs-1 text-uppercase fw-bold" style="color: #D1CAC3 ">Pharma's Hoang</span>
+            <span class="fs-1 text-uppercase fw-bold" style="color: #D1CAC3 ">Hoang's Pharma</span>
         </a>
 
         <ul class="col-md-5 justify-content-center nav navbar-brand fw-bold" style="color: #1E3B29">
