--- a/Pharma.Web/Views/Shared/Layouts.cshtml
+++ b/Pharma.Web/Views/Shared/Layouts.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     
     <meta name="description" content="">
-    <title>Pharma Hoang</title>
+    <title>Hoang's Pharma</title>
 
     <link href="~/Assets/client/css/bootstrap.css" rel="stylesheet" />
     <link href="~/Assets/client/font-awesome/css/all.css" rel="stylesheet" />
