--- a/Pharma.Web/app/components/home/homeView.html
+++ b/Pharma.Web/app/components/home/homeView.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Trang quản trị Pharma's Hoàng</h1>
+                <h1>Trang quản trị Hoang's Pharma</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="card-body">
-            Chào mừng bạn đã trở lại giao diện quản trị hệ thống cho trang web Nhà thuốc Pharma's Hoàng
+            Chào mừng bạn đã trở lại giao diện quản trị hệ thống cho trang web Nhà thuốc Hoang's Pharma
         </div>
         <!-- /.card-body -->
         <div class="card-footer">
