--- a/Pharma.Web/app/components/login/loginView.html
+++ b/Pharma.Web/app/components/login/loginView.html
@@ -1,7 +1,7 @@
 ﻿<div class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <a href="#"><b>Pharma's </b>Hoàng</a>
+            <a href="/"><b>Hoang's </b>Pharma</a>
         </div>
         <!-- /.login-logo -->
         <div class="card">
