--- a/Pharma.Web/app/shared/views/baseView.html
+++ b/Pharma.Web/app/shared/views/baseView.html
@@ -7,7 +7,7 @@
                 <a class="nav-link" data-widget="pushmenu" href="javascript:void(0);" role="button"><i class="fas fa-bars"></i></a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a href="admin#!/" class="nav-link">Trang chủ</a>
+                <a href="admin#!/admin" class="nav-link">Trang chủ</a>
             </li>
         </ul>
 
@@ -59,7 +59,7 @@
         <!-- Brand Logo -->
         <a href="admin#!/admin" class="brand-link">
             <img src="../../../Assets/admin/img/pharma/config/logoMedicine.jpg" alt="AdminLTE Logo" class="brand-image img-circle elevation-2" style="opacity: .8">
-            <span class="brand-text font-weight-light">PharmaHoang</span>
+            <span class="brand-text font-weight-light">Hoang's Pharma</span>
         </a>
 
         <!-- Sidebar -->
@@ -70,7 +70,7 @@
                     <img src="../../../Assets/admin/img/pharma/config/avtHoang.jpg" class="img-circle elevation-2" alt="User Image">
                 </div>
                 <div class="info">
-                    <a href="#" class="d-block">Lê Tiến Hoàng</a>
+                    <a href="admin#!/admin" class="d-block">Lê Tiến Hoàng</a>
                 </div>
             </div>
             <!--authentication.userName-->
