--- a/Pharma.Web/Views/Home/PostStories.cshtml
+++ b/Pharma.Web/Views/Home/PostStories.cshtml
@@ -17,7 +17,7 @@
                             </li>
                             <li class="d-flex align-items-center">
                                 <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3" /></svg>
-                                <small>Pharma's Hoàng</small>
+                                <small>Hoang's Pharma</small>
                             </li>
                         </ul>
                     </div>
