--- a/Pharma.Web/Views/Admin/Index.cshtml
+++ b/Pharma.Web/Views/Admin/Index.cshtml
@@ -55,6 +55,7 @@
     <script src="~/Assets/admin/libs/angular-animate/angular-animate.min.js"></script>
     <script src="~/Assets/admin/libs/angular-messages/angular-messages.min.js"></script>
     <script src="~/Assets/admin/libs/angular-material/angular-material.min.js"></script>
+    <script src="~/Assets/admin/libs/checklist-model/checklist-model.js"></script>
 
     <script src="~/app/shared/modules/pharma.common.js"></script>
     <script src="~/app/shared/filters/statusFilter.js"></script>
@@ -69,6 +70,9 @@
     <script src="~/app/shared/services/loginService.js"></script>
     <script src="~/app/shared/services/commonService.js"></script>
 
+    <script src="~/app/components/application_groups/applicationGroups.module.js"></script>
+    <script src="~/app/components/application_roles/applicationRoles.module.js"></script>
+    <script src="~/app/components/application_users/applicationUsers.module.js"></script>
     <script src="~/app/components/deliveryNotes/deliveryNotes.module.js"></script>
     <script src="~/app/components/contactdetails/contactdetails.module.js"></script>
     <script src="~/app/components/footers/footers.module.js"></script>
@@ -85,6 +89,15 @@
     <script src="~/app/app.js"></script>
     <script src="~/app/components/home/rootController.js"></script>
 
+    <script src="~/app/components/application_groups/applicationGroupAddController.js"></script>
+    <script src="~/app/components/application_groups/applicationGroupEditController.js"></script>
+    <script src="~/app/components/application_groups/applicationGroupListController.js"></script>
+    <script src="~/app/components/application_roles/applicationRoleAddController.js"></script>
+    <script src="~/app/components/application_roles/applicationRoleEditController.js"></script>
+    <script src="~/app/components/application_roles/applicationRoleListController.js"></script>
+    <script src="~/app/components/application_users/applicationUserListController.js"></script>
+    <script src="~/app/components/application_users/applicationUserEditController.js"></script>
+    <script src="~/app/components/application_users/applicationUserAddController.js"></script>
     <script src="~/app/components/deliveryNotes/deliveryNoteAddController.js"></script>
     <script src="~/app/components/deliveryNotes/deliveryNoteEditController.js"></script>
     <script src="~/app/components/deliveryNotes/deliveryNoteListController.js"></script>
