--- a/Pharma.Web/app/components/application_groups/applicationGroupAddView.html
+++ b/Pharma.Web/app/components/application_groups/applicationGroupAddView.html
@@ -1,48 +1,48 @@
 ﻿<section class="content-header">
-  <h1>
-    Thêm mới nhóm
-  </h1>
-  <ol class="breadcrumb">
-    <li><a href="/admin"><i class="fa fa-dashboard"></i> Trang chủ</a></li>
-    <li><a ui-sref="categories">Danh mục nhóm</a></li>
-    <li class="active"><a href="#">Thêm mới</a></li>
-  </ol>
-</section>
-<section class="content">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="box box-info">
-        <div class="box-header with-border">
-          <h3 class="box-title">{{group.Name}}</h3>
-        </div><!-- /.box-header -->
-        <!-- form start -->
-        <form class="form-horizontal" role="form" novalidate name="frmAddAppGroup" ng-submit="addAppGroup()">
-          <div class="box-body">
-            <div class="col-md-8">
-              <div class="form-group" ng-class="{ 'has-error' : frmAddAppGroup.name.$invalid && !frmAddAppGroup.name.$pristine }">
-                <label class="col-sm-2 control-label">Tên nhóm</label>
-                <div class="col-sm-10">
-                  <input type="text" name="name" class="form-control"
-                         required reqired-message="Tên nhóm bắt buộc." ng-model="group.Name">
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <label ng-repeat="role in roles">
-                    <input type="checkbox" checklist-model="group.Roles" checklist-value="role"> {{role.Description}}
-                  </label>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <a ui-sref="application_groups" class="btn btn-default">Hủy bỏ</a>
-                  <input type="submit" ng-disabled="frmAddAppGroup.$invalid" class="btn btn-primary" value="Lưu lại" />
-                </div>
-              </div>
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1>Thêm mới nhóm</h1>
             </div>
-          </div><!-- /.box-body -->
-        </form>
-      </div><!-- /.box -->
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                    <li class="breadcrumb-item"><a href="admin#!/admin">Trang chủ</a></li>
+                    <li class="breadcrumb-item">Hệ thống</li>
+                    <li class="breadcrumb-item"><a ui-sref="application_groups">Nhóm người dùng</a></li>
+                    <li class="breadcrumb-item active">Thêm mới nhóm</li>
+                </ol>
+            </div>
+        </div>
     </div>
-  </div>
+</section>
+
+<section class="content">
+    <div class="card card-default">
+        <form class="form-horizontal" role="form" novalidate name="frmAddAppGroup" ng-submit="addAppGroup()">
+            <div class="box-body">
+                <div class="col-md-8">
+                    <div class="form-group" ng-class="{ 'has-error' : frmAddAppGroup.name.$invalid && !frmAddAppGroup.name.$pristine }">
+                        <label class="col-sm-2 control-label">Tên nhóm</label>
+                        <div class="col-sm-10">
+                            <input type="text" name="name" class="form-control"
+                                   required reqired-message="Tên nhóm bắt buộc." ng-model="group.Name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <label ng-repeat="role in roles">
+                                <input type="checkbox" checklist-model="group.Roles" checklist-value="role"> {{role.Description}}
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="card-footer">
+                        <button ui-sref="application_groups" class="btn btn-default">Hủy</button>
+                        <button type="submit" ng-disabled="frmAddAppGroup.$invalid" class="btn btn-success fa-pull-right">Lưu</button>
+                    </div>
+                </div>
+            </div><!-- /.box-body -->
+        </form>
+    </div>
 </section>
