--- a/Pharma.Web/app/components/application_roles/applicationRoleEditView.html
+++ b/Pharma.Web/app/components/application_roles/applicationRoleEditView.html
@@ -2,45 +2,45 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Cập nhật nhóm: {{group.Name}}</h1>
+                <h1>Cập nhật quyền: {{role.Name}}</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="admin#!/admin">Trang chủ</a></li>
                     <li class="breadcrumb-item">Hệ thống</li>
-                    <li class="breadcrumb-item"><a ui-sref="application_groups">Nhóm người dùng</a></li>
+                    <li class="breadcrumb-item"><a ui-sref="app_roles">Danh sách quyền</a></li>
                     <li class="breadcrumb-item active">Cập nhật</li>
                 </ol>
             </div>
         </div>
     </div>
 </section>
-
 <section class="content">
     <div class="card card-default">
-        <form class="form-horizontal" role="form" novalidate name="frmUpdateAppGroup" ng-submit="updateApplicationGroup()">
+        <!-- form start -->
+        <form class="form-horizontal" role="form" novalidate name="frmUpdateAppRole" ng-submit="updateApplicationRole()">
             <div class="box-body">
                 <div class="col-md-8">
-                    <div class="form-group" ng-class="{ 'has-error' : frmUpdateAppGroup.name.$invalid && !frmUpdateAppGroup.name.$pristine }">
-                        <label class="col-sm-2 control-label">Tên danh mục</label>
+                    <div class="form-group" ng-class="{ 'has-error' : frmUpdateAppRole.name.$invalid && !frmUpdateAppRole.name.$pristine }">
+                        <label class="col-sm-2 control-label">Tên quyền</label>
                         <div class="col-sm-10">
                             <input type="text" name="name" class="form-control"
-                                   required reqired-message="Tên nhóm bắt buộc." ng-model="group.Name">
+                                   required reqired-message="Tên quyền bắt buộc." ng-model="role.Name">
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <label ng-repeat="role in roles">
-                                <input type="checkbox" checklist-model="group.Roles" checklist-value="role"> {{role.Description}}
-                            </label>
+                        <label class="col-sm-2 control-label">Mô tả</label>
+                        <div class="col-sm-10">
+                            <textarea type="text" class="form-control" ng-model="role.Description"></textarea>
+
                         </div>
                     </div>
 
                 </div>
                 <div class="form-group">
                     <div class="card-footer">
-                        <button ui-sref="application_groups" class="btn btn-default">Hủy</button>
-                        <button type="submit" ng-disabled="frmUpdateAppGroup.$invalid" class="btn btn-primary fa-pull-right">Lưu</button>
+                        <button ui-sref="app_roles" class="btn btn-default">Hủy</button>
+                        <button type="submit" ng-disabled="frmUpdateAppRole.$invalid" class="btn btn-success fa-pull-right">Lưu</button>
                     </div>
                 </div>
             </div><!-- /.box-body -->
