--- a/Pharma.Web/app/components/application_users/applicationUserListView.html
+++ b/Pharma.Web/app/components/application_users/applicationUserListView.html
@@ -1,15 +1,14 @@
-﻿  <!-- Content Header (Page header) -->
-<section class="content-header">
+﻿<section class="content-header">
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Nhóm người dùng</h1>
+                <h1>Danh sách người dùng</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="admin#!/admin">Trang chủ</a></li>
                     <li class="breadcrumb-item">Hệ thống</li>
-                    <li class="breadcrumb-item active">Nhóm người dùng</li>
+                    <li class="breadcrumb-item active">Danh sách người dùng</li>
                 </ol>
             </div>
         </div>
@@ -23,13 +22,12 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" ng-model="keyword" placeholder="Từ khóa" aria-label="Từ khóa" aria-describedby="button-addon2">
-                        <button class="btn btn-outline-secondary" ng-click="search()" type="button" id="button-addon2">Tìm kiếm</button>
+                        <input type="text" class="form-control" ng-model="filterExpression" placeholder="Từ khóa" aria-label="Từ khóa" aria-describedby="button-addon2">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <button class="btn btn-danger fa-pull-right" ng-click="deleteMultiple()" id="btnDelete" disabled>Xóa</button>
-                    <button class="btn btn-success fa-pull-right" ui-sref="add_application_group">Thêm mới</button>
+                    <button class="btn btn-success fa-pull-right" ui-sref="add_application_user">Thêm mới</button>
                 </div>
             </div>
             <div class="row">
@@ -37,24 +35,20 @@
                     <table class="table table-bordered">
                         <thead>
                             <tr>
-                                <td><input name="all" type="checkbox" ng-click="selectAll()" /></td>
-                                <th style="width: 5%">ID</th>
-                                <th style="width:55%">Tên nhóm</th>
-                                <th style="width: 20%">Mô tả</th>
-                                <th style="width: 10%">Thao tác</th>
+                                <th>Tên người dùng</th>
+                                <th>Tài khoản</th>
+                                <th>Email</th>
+                                <th style="width:10%"></th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="item in data">
-                                <td><input type="checkbox" ng-model="item.checked" name="all" /></td>
-                                <td>{{item.ID}}</td>
-                                <td><a ui-sref="edit_application_group({id:item.ID})">{{item.Name}}</a></td>
+                            <tr ng-repeat="item in data | filter:filterExpression">
+                                <td><a ui-sref="edit_application_user({id:item.Id})">{{item.FullName}}</a></td>
+                                <td><a ui-sref="edit_application_user({id:item.Id})">{{item.UserName}}</a></td>
+                                <td>{{item.Email}}</td>
                                 <td>
-                                    {{item.Description}}
-                                </td>
-                                <td>
-                                    <button class="btn btn-sm btn-primary" ui-sref="edit_application_group({id:item.ID})"><i class="fa fa-pencil"></i></button>
-                                    <button class="btn  btn-sm btn-danger" ng-click="deleteItem(item.ID)"><i class="fa fa-trash"></i></button>
+                                    <a ui-sref="edit_application_user({id:item.Id})" class="btn btn-sm btn-primary"><i class="fa fa-pencil"></i></a>
+                                    <button class="btn btn-sm btn-danger" ng-click="deleteItem(item.Id)"><i class="fa fa-trash-alt"></i></button>
                                 </td>
                             </tr>
                         </tbody>
@@ -64,6 +58,13 @@
                             </tr>
                         </tfoot>
                     </table>
+                    <div ng-if="loading">
+                        <div class="col-xs-4"></div>
+                        <div class="col-xs-4">
+                            <i class="fa fa-refresh fa-4x fa-spin"></i> <label class="label label-primary">Đang tải...</label>
+                        </div>
+                        <div class="col-xs-4"></div>
+                    </div>
                 </div>
             </div>
             <!-- /.card -->
